--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "lint-staged": {
     "src/**/*.{ts, tsx}": [
-      "npm run format:write && git add -A"
+      "npm run format:write"
     ]
   },
   "husky": {
