--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/manager-webpack4": "^6.5.12",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -48,10 +49,13 @@
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.8.3",
-    "husky": "^8.0.0"
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "lodash.debounce": "^4.0.8"
   }
 }
