--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -33,13 +33,8 @@ rules:
     - warn
     - single
     - allowTemplateLiterals: true
-
   camelcase: error
-
   'react/react-in-jsx-scope': off
-
-  "@typescript-eslint/consistent-type-definitions": 0
-
+  '@typescript-eslint/consistent-type-definitions': 0
   '@typescript-eslint/strict-boolean-expressions': 0
-
   '@typescript-eslint/consistent-type-assertions': 0
