--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "utility-hooks",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "files":["dist"],
+  "main":"./dist/react-hooks-helpers.umd.js",
+  "module":"./dist/react-hooks-helpers.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/react-hooks-helpers.es.js",
+      "require": "./dist/react-hooks-helpers.umd.js"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "start-storybook -p 6006",
+    "build:clean": "rm -rf dist",
+    "build": "npm run build:clean && vite build",
     "build:storybook": "build-storybook",
     "format:check": "prettier --check \"./src/**/*.{ts,tsx}\"",
     "format:write": "prettier --write \"./src/**/*.{ts,tsx}\"",
@@ -53,7 +62,8 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "vite": "^3.1.2"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8"
