--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utility-hooks",
+  "name": "react-hooks-helpers",
   "version": "1.0.0",
   "files":["dist"],
   "main":"./dist/index.umd.js",
