--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "ESNext",
       "dom"
     ], // specifies which default set of type definitions to use ("DOM", "ES6", etc)
-    "outFile": "dist/index.d.ts", // .js (as well as .d.ts, .js.map, etc.) files will be emitted into this directory.,
+    "outDir": "dist", // .js (as well as .d.ts, .js.map, etc.) files will be emitted into this directory.,
     "removeComments": true, // Strips all comments from TypeScript files when converting into JavaScript- you rarely read compiled code so this saves space
     "target": "ES6", // Target environment. Most modern browsers support ES6, but you may want to set it to newer or older. (defaults to ES3)
     "jsx": "react-jsx",
@@ -36,7 +36,6 @@
   "include": ["./**/*.ts", "./**/*.tsx"],
   "exclude": [
     "node_modules/**/*",
-    "src/**/*.stories.tsx",
     "vite.config.ts"
   ]
 }
