--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "dev": "start-storybook -p 6006",
     "build:types": "tsc --emitDeclarationOnly --project tsconfig.build.json",
     "build:clean": "rm -rf dist",
@@ -49,10 +50,12 @@
     "@storybook/manager-webpack4": "^6.5.12",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/react": "^13.4.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@vitejs/plugin-react": "^2.1.0",
     "babel-loader": "^8.2.5",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
@@ -64,11 +67,13 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
+    "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.8.3",
-    "vite": "^3.1.2"
+    "vite": "^3.1.2",
+    "vitest": "^0.23.4"
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8"
