--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@storybook/manager-webpack4": "^6.5.12",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.20",
