--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
   "lint-staged": {
     "src/**/*.{ts, tsx}": [
       "npm run format:write"
+    ],
+    "src/**/*.test.{ts, tsx}": [
+      "npm run format:write"
+    ],
+    "src/**/*.stories.{ts, tsx}": [
+      "npm run format:write"
     ]
   },
   "husky": {
