[chore] add cjs to build, update package.json with unpkg

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.cjs.js",
+      "types": "./dist/index.d.ts"
     }
   },
+  "unpkg": "dist/index.umd.js",
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest watch",
